5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1764_672.log
== TEST (2019-05-21 08:22:06) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:22:14) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:22:18) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print(nome)
-- EXECUTION TIME:
0.580192
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[[[[[[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]]




   [[[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]]




   [[[[[1.]]]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[[[[[[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]]




   [[[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]



    [[[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]


     [[[1.]]]]]




   [[[[[1.]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:22:26) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:22:26) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print(nome)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:22:47) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print([nome])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:22:51) 
-- CODE:
from numpy import*
nome = ones([1,3,4,5,6,1,1,1])
print([nome])
-- EXECUTION TIME:
0.555306
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([[[[[[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]]],




         [[[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([[[[[[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]]],




         [[[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]],


           [[[1.]]]],



          [[[[1.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:24:40) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([nome])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:24:40) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([nome])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:24:45) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([nome])
-- EXECUTION TIME:
0.374604
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 3, 4, 5, 6, 1, 1, 1])]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[array([1, 3, 4, 5, 6, 1, 1, 1])]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:24:50) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([nome])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:24:55) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:24:58) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([1])
-- EXECUTION TIME:
0.525283
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:25:03) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:25:12) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print([1 1 1 1])
-- ERROR:
File "XXXX", line 3
    print([1 1 1 1])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:25:22) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print(["1 1 1 1"])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:25:25) 
-- CODE:
from numpy import*
nome = array([1,3,4,5,6,1,1,1])
print(["1 1 1 1"])
-- EXECUTION TIME:
0.477208
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
['1 1 1 1']
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
['1 1 1 1']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:25:36) 
-- CODE:
from numpy import*
nome = array([6])
print(["1 1 1 1"])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:25:43) 
-- CODE:
from numpy import*
nome = array([6])
print([1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:26:06) 
-- CODE:
from numpy import*
nome = array(dtype=int(([6]))
print([1])
-- ERROR:
File "XXXX", line 3
    print([1])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:26:20) 
-- CODE:
from numpy import*
nome = array(dtype=int(([6])))
print([1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:27:54) 
-- CODE:
from numpy import*
vetores = array(1,2,3,1,2,3,1,2,3,1,2,3,1,2,3)
print(vetores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:28:14) 
-- CODE:
from numpy import*
vetores = array([1,2,3,1,2,3,1,2,3,1,2,3,1,2,3])
print(vetores)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:28:56) 
-- CODE:
from numpy import*
vetores = array([1,2,3,1,2,3,1,2,3,1,2,3,1,2,3])
print(vetores)
print(vetores[1],[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:29:19) 
-- CODE:
from numpy import*
vetores = array([1,2,3,1,2,3,1,2,3,1,2,3,1,2,3])
print(vetores)
print(vetores[1],[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:29:49) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,2,3,1,2,3,1,2,3,1,2,3,1,2,3])
print(vetores)
print(vetores[1],[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:29:56) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,2,3,1,2,3,1,2,3,1,2,3,1,2,3])
print(vetores)
print(vetores[1],[4])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:30:17) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:30:21) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
print(vetores)

-- EXECUTION TIME:
0.303537
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:30:30) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:30:33) 
-- CODE:
from numpy import*
int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:31:02) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if 
print(vetores)

-- ERROR:
File "XXXX", line 4
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:31:55) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if (numero == 6):
	numero = numero * numero
	
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:31:59) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if (numero == 6):
	numero = numero * numero
	
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:32:02) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if (numero == 6):
	numero = numero * numero
	
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:32:19) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if (numero == 6):
	numero = numero * numero
else:
	print("nada")
	
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:32:29) 
-- CODE:
from numpy import*
numero = int(input("entrada: "))
vetores = array([1,1,1,1,1,1])
if (numero == 6):
	numero = numero * numero
else:
	print("nada")
	
print(vetores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:37:37) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:37:41) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 08:37:44) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 08:37:49) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- EXECUTION TIME:
0.427527
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 11:29:12) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 11:29:19) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 11:29:44) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 11:29:49) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 11:29:57) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:57:45) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:58:40) 
-- CODE:
from numpy import*

v = ones(6, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 15:58:57) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 15:58:59) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

v = ones(N, dtype=int)

print(v)

-- EXECUTION TIME:
0.461889
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 15:57:46) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:29:01) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:29:07) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:29:12) 
-- CODE:
from numpy import*
N = int(input("Informe o tamanho do vetor: "))

vetor = ones(N, dtype=int)

print(vetor)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
